--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 # Files and directories created by pub
 .dart_tool/
 .packages
+
+# Conventional directory for build outputs.
 build/
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
@@ -19,3 +21,4 @@ doc/api/
 *.js_
 *.js.deps
 *.js.map
+/.idea/
